eks-practice-materials/kustomize-practice/practice/manifests/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
  namespace: kustomize-practice
  labels:
    app: webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: my-nginx
          image: 123456789012.dkr.ecr.ap-northeast-1.amazonaws.com/my-nginx:v1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      restartPolicy: Always
